--- a/company_list/Company_List.ipynb
+++ b/company_list/Company_List.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Review of an company spreadsheet"
+    "Data Review of an company spreadsheet\n",
+    "https://youtu.be/2uvysYbKdjM"
    ]
   },
   {
@@ -342,25 +343,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['United Parcel Service, Inc.', 'The Home Depot, Inc.',\n",
-       "       'Home Depot U.S.A., Inc.', ...,\n",
-       "       \"Vaden's Acoustics & Drywall, Inc.\", 'United Real Estate',\n",
-       "       'New Process Steel Holding Co., Inc.'], dtype=object)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Company Name', 'D-U-N-S® Number', 'Address Line 1', 'City', 'State Or Province', 'Postal Code', 'Country/Region', 'Phone', 'URL', 'Sales (USD)', 'Employees (Single Site)', 'Employees \\n(Total)', 'Business Description', 'Ownership Type', 'D&B Legal Status Type', 'Entity Type', 'Is Headquarters', 'Ticker', 'Parent Company', 'Parent Country/Region', 'Global Ultimate Company', 'Global Ultimate Country/Region', 'D&B Hoovers Industry', 'US 8-Digit SIC Code', 'US 8-Digit SIC Description', 'US SIC 1987 Code', 'US SIC 1987 Description']\n"
+     ]
     }
    ],
    "source": [
-    "df[\"Company Name\"].unique()"
+    "print(df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop = [\"US SIC 1987 Description\", \"US SIC 1987 Code\", \n",
+    "                   \"US 8-Digit SIC Code\", \"US 8-Digit SIC Description\",\n",
+    "                   \"D-U-N-S® Number\"]\n",
+    "\n",
+    "# Drop the specified columns\n",
+    "df_updated = df.drop(columns=columns_to_drop, errors='ignore')\n",
+    "df_updated.to_csv(\"data/TX_GA_company_list_updated.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1315 entries, 0 to 1314\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   Company Name                    1315 non-null   object \n",
+      " 1   Address Line 1                  1315 non-null   object \n",
+      " 2   City                            1315 non-null   object \n",
+      " 3   State Or Province               1315 non-null   object \n",
+      " 4   Postal Code                     1315 non-null   object \n",
+      " 5   Country/Region                  1315 non-null   object \n",
+      " 6   Phone                           1270 non-null   object \n",
+      " 7   URL                             1050 non-null   object \n",
+      " 8   Sales (USD)                     1278 non-null   float64\n",
+      " 9   Employees (Single Site)         1315 non-null   int64  \n",
+      " 10  Employees \n",
+      "(Total)              1315 non-null   int64  \n",
+      " 11  Business Description            1315 non-null   object \n",
+      " 12  Ownership Type                  1315 non-null   object \n",
+      " 13  D&B Legal Status Type           1315 non-null   object \n",
+      " 14  Entity Type                     1315 non-null   object \n",
+      " 15  Is Headquarters                 1315 non-null   bool   \n",
+      " 16  Ticker                          79 non-null     object \n",
+      " 17  Parent Company                  1040 non-null   object \n",
+      " 18  Parent Country/Region           1040 non-null   object \n",
+      " 19  Global Ultimate Company         1040 non-null   object \n",
+      " 20  Global Ultimate Country/Region  1040 non-null   object \n",
+      " 21  D&B Hoovers Industry            1315 non-null   object \n",
+      "dtypes: bool(1), float64(1), int64(2), object(18)\n",
+      "memory usage: 217.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "company_df = pd.read_csv(\"data/TX_GA_company_list_updated.csv\")\n",
+    "company_df.info()"
    ]
   }
  ],
