Update Company_List notebook to include null value summary and increment execution count

--- a/company_list/Company_List.ipynb
+++ b/company_list/Company_List.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -413,11 +413,44 @@
       "dtypes: bool(1), float64(1), int64(2), object(18)\n",
       "memory usage: 217.2+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Company Name                         0\n",
+       "Address Line 1                       0\n",
+       "City                                 0\n",
+       "State Or Province                    0\n",
+       "Postal Code                          0\n",
+       "Country/Region                       0\n",
+       "Phone                               45\n",
+       "URL                                265\n",
+       "Sales (USD)                         37\n",
+       "Employees (Single Site)              0\n",
+       "Employees \\n(Total)                  0\n",
+       "Business Description                 0\n",
+       "Ownership Type                       0\n",
+       "D&B Legal Status Type                0\n",
+       "Entity Type                          0\n",
+       "Is Headquarters                      0\n",
+       "Ticker                            1236\n",
+       "Parent Company                     275\n",
+       "Parent Country/Region              275\n",
+       "Global Ultimate Company            275\n",
+       "Global Ultimate Country/Region     275\n",
+       "D&B Hoovers Industry                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "company_df = pd.read_csv(\"data/TX_GA_company_list_updated.csv\")\n",
-    "company_df.info()"
+    "company_df.info()\n",
+    "company_df.isnull().sum() "
    ]
   }
  ],
