Enhance Company_List notebook with improved markdown descriptions for data review and cleansing steps

--- a/company_list/Company_List.ipynb
+++ b/company_list/Company_List.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Review of an company spreadsheet\n"
+    "## Data Review and cleansing of D&B spreadshee for use later\n"
    ]
   },
   {
@@ -339,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspecting columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -356,11 +363,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Dropping and renaming columns"
+   ]
   },
   {
    "cell_type": "code",
@@ -815,6 +822,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Writing updated columns to csv**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -888,6 +902,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Clean up all the null values**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -909,26 +930,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total unique industries: 13\n",
-      "['Transportation & Logistics' 'Retail' 'Other' 'Technology' 'Travel'\n",
-      " 'Education' 'Healthcare' 'Manufacturing' 'Miscellaneous' 'Banking'\n",
-      " 'Construction & Real Estate' 'Energy & Utilities'\n",
-      " 'Entertainment & Recreation']\n"
-     ]
-    }
-   ],
    "source": [
-    "unique_industries = company_df[\"Sector\"].unique()\n",
-    "print(f\"Total unique industries: {len(unique_industries)}\")\n",
-    "print(unique_industries)"
+    "#### Create a new column named Sector and start categorizing the values from the Industry column"
    ]
   },
   {
@@ -1319,7 +1324,7 @@
    ],
    "source": [
     "other_count = company_df[company_df['Sector'] == 'Other'].shape[0]\n",
-    "print(f\"Number of 'Other' entries: {other_count}\")\n"
+    "print(f\"Number of 'Other' entries: {other_count}\")"
    ]
   },
   {
@@ -1768,6 +1773,243 @@
     "sns.countplot(y='Sector', data=company_df, order=company_df['Sector'].value_counts().index)\n",
     "plt.title('Distribution of Sectors')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Phone</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Employees</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Parent Company</th>\n",
+       "      <th>Parent Country/Region</th>\n",
+       "      <th>Global Ultimate Company</th>\n",
+       "      <th>Global Ultimate Country/Region</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Parent_Company</th>\n",
+       "      <th>Parent_Country_Region</th>\n",
+       "      <th>Global_Ultimate_Company</th>\n",
+       "      <th>Global_Ultimate_Country_Region</th>\n",
+       "      <th>Sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1310</th>\n",
+       "      <td>Sprinkles Cupcakes, LLC</td>\n",
+       "      <td>7710 Rialto Blvd Unit 150</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>78735-8579</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1-737-204-5467</td>\n",
+       "      <td>http://www.sprinkles.com</td>\n",
+       "      <td>11078029.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Food Manufacturing</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Manufacturing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1311</th>\n",
+       "      <td>Terry Enterprises Headquarters, LLC</td>\n",
+       "      <td>5555 N Lamar Blvd Ste E109</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>78751-1001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1-512-451-9393</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>10288291.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Consulting Services</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Business Services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1312</th>\n",
+       "      <td>Vaden's Acoustics &amp; Drywall, Inc.</td>\n",
+       "      <td>8795 Harmon Rd</td>\n",
+       "      <td>Fort Worth</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>76177-7501</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1-817-847-8822</td>\n",
+       "      <td>http://www.vadensacoustics.com</td>\n",
+       "      <td>53733810.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Specialty Construction Trade Contractors</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Construction &amp; Real Estate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1313</th>\n",
+       "      <td>United Real Estate</td>\n",
+       "      <td>5430 Lyndon B Johnson Fwy</td>\n",
+       "      <td>Dallas</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>75240-2601</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1-817-262-0621</td>\n",
+       "      <td>http://www.unitedrealestatedallas.com</td>\n",
+       "      <td>11469420.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Real Estate Agents and Brokers</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Construction &amp; Real Estate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>New Process Steel Holding Co., Inc.</td>\n",
+       "      <td>1322 N Post Oak Rd</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>77055-5406</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>1-713-686-9631</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Holding Companies</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Banking</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Company Name                     Address  \\\n",
+       "1310              Sprinkles Cupcakes, LLC   7710 Rialto Blvd Unit 150   \n",
+       "1311  Terry Enterprises Headquarters, LLC  5555 N Lamar Blvd Ste E109   \n",
+       "1312    Vaden's Acoustics & Drywall, Inc.              8795 Harmon Rd   \n",
+       "1313                   United Real Estate   5430 Lyndon B Johnson Fwy   \n",
+       "1314  New Process Steel Holding Co., Inc.          1322 N Post Oak Rd   \n",
+       "\n",
+       "            City  State Postal Code        Country           Phone  \\\n",
+       "1310      Austin  Texas  78735-8579  United States  1-737-204-5467   \n",
+       "1311      Austin  Texas  78751-1001  United States  1-512-451-9393   \n",
+       "1312  Fort Worth  Texas  76177-7501  United States  1-817-847-8822   \n",
+       "1313      Dallas  Texas  75240-2601  United States  1-817-262-0621   \n",
+       "1314     Houston  Texas  77055-5406  United States  1-713-686-9631   \n",
+       "\n",
+       "                                        URL       Sales  Employees  ...  \\\n",
+       "1310               http://www.sprinkles.com  11078029.0        500  ...   \n",
+       "1311                                Unknown  10288291.0        500  ...   \n",
+       "1312         http://www.vadensacoustics.com  53733810.0        500  ...   \n",
+       "1313  http://www.unitedrealestatedallas.com  11469420.0        500  ...   \n",
+       "1314                                Unknown         0.0        500  ...   \n",
+       "\n",
+       "     Parent Company Parent Country/Region Global Ultimate Company  \\\n",
+       "1310            N/A                   N/A                     N/A   \n",
+       "1311            N/A                   N/A                     N/A   \n",
+       "1312            N/A                   N/A                     N/A   \n",
+       "1313            N/A                   N/A                     N/A   \n",
+       "1314            N/A                   N/A                     N/A   \n",
+       "\n",
+       "     Global Ultimate Country/Region                                  Industry  \\\n",
+       "1310                            N/A                        Food Manufacturing   \n",
+       "1311                            N/A                       Consulting Services   \n",
+       "1312                            N/A  Specialty Construction Trade Contractors   \n",
+       "1313                            N/A            Real Estate Agents and Brokers   \n",
+       "1314                            N/A                         Holding Companies   \n",
+       "\n",
+       "     Parent_Company Parent_Country_Region Global_Ultimate_Company  \\\n",
+       "1310            N/A                   N/A                     N/A   \n",
+       "1311            N/A                   N/A                     N/A   \n",
+       "1312            N/A                   N/A                     N/A   \n",
+       "1313            N/A                   N/A                     N/A   \n",
+       "1314            N/A                   N/A                     N/A   \n",
+       "\n",
+       "     Global_Ultimate_Country_Region                      Sector  \n",
+       "1310                            N/A               Manufacturing  \n",
+       "1311                            N/A           Business Services  \n",
+       "1312                            N/A  Construction & Real Estate  \n",
+       "1313                            N/A  Construction & Real Estate  \n",
+       "1314                            N/A                     Banking  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "company_df.tail()"
    ]
   }
  ],
